Fix navbar colour glitches in dropdown and on mobile devices.

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,3 +1,7 @@
+:root {
+    --gray: hsl(0, 0%, 21%);
+}
+
 html, body {
     min-height: 100vh;
     display: flex;
@@ -6,4 +10,18 @@ html, body {
 
 body > footer {
     margin-top: auto;
+}
+
+.navbar-dropdown.has-background-dark {
+    border-top-color: var(--gray);
+}
+
+.navbar-link.is-active, .navbar-link:focus, .navbar-link:focus-within, .navbar-link:hover, a.navbar-item.is-active, a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover {
+    background-color: var(--gray);
+}
+
+@media screen and (min-width: 1024px) {
+    .navbar-dropdown a.navbar-item:focus, .navbar-dropdown a.navbar-item:hover {
+        background-color: #292929
+    }
 }
